--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,17 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m
+
+
+# Workaround to make spotless work with java 17 -
+# see https://github.com/diffplug/spotless/tree/main/plugin-gradle#google-java-format and
+# https://github.com/ie3-institute/PowerSystemDataModel/issues/481 for details
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m \
+  --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
